--- a/includes/templates/template_blacksport/css/stylesheet.css
+++ b/includes/templates/template_blacksport/css/stylesheet.css
@@ -105,13 +105,12 @@ HR {
 /*warnings, errors, messages*/
 .messageStackWarning, .messageStackError, .messageStackSuccess, .messageStackCaution {
         line-min-height: 1.8em;
-        padding: 0.6em 0.2em 0.2em;
-        background:#f76218;
-		vertical-align:bottom;
+        padding: 0.2em;
+        
         }
-.messageStackError img{ margin:-5px 10px 0px;}
+
 .messageStackWarning, .messageStackError {
-        color:#fff; 
+        color:#FF0000; 
         }
 
 .messageStackSuccess {
@@ -163,13 +162,13 @@ HR {
 
 /*navigation*/
 #sorter {margin:0;}
-	#sorter label{ font-weight:bold; color:#fff;}
+	#sorter label{ font-weight:bold; color:#000;}
 
 .navSplitPagesResult { margin:5px 10px 17px 20px;}
 .navSplitPagesLinks{ margin:0 0 10px 0;}
-.navSplitPagesLinks a {display:inline-block; background:#ebede5; padding:0px 10px; color:#3e3e3e;  text-decoration:none;}
-	.navSplitPagesLinks a:hover{ background:#bbbb91;}
-	.navSplitPagesLinks strong{  display:inline-block; background:#393733; padding:0px 10px; color:#fff;  }
+.navSplitPagesLinks a {display:inline-block; background:#e0e0e0; padding:5px 10px; color:#3e3e3e;  text-decoration:none;}
+	.navSplitPagesLinks a:hover{ background:#262626; color:#fff;}
+	.navSplitPagesLinks strong{  display:inline-block; background:url(../images/menu-bg-act.gif) repeat-x left top; padding:5px 10px; color:#fff;  }
 
 .navSplitPagesResult a {color:#161616;}
 
@@ -178,7 +177,6 @@ HR {
         white-space: nowrap;
         margin:0px 2px 3px 0px;
         list-style-type: none;
-		float:left;
         }
 		
 
@@ -351,10 +349,9 @@ padding: 0.5em;
         width: 5.5em;
         text-align: right;
         padding: 0.2em;
-		color:#000;
-	font-family:"Times New Roman", Times, serif;
-	font-size:20px;
-	line-height:20px;
+		color:#181818;
+	font-size:22px;
+	line-height:24px;
 	font-weight:normal;
         }
 
@@ -530,19 +527,17 @@ LABEL#textAreaReviews {
 }
 		
 .normalprice {
-	color:#b2af80;
-	font-family:"Times New Roman", Times, serif;
-	font-size:20px;
-	line-height:20px;
+	color:#979797;
+	font-size:18px;
+	line-height:24px;
 	font-weight:normal;
 	text-decoration:line-through;
-	margin-right:15px;
+	padding-right:15px;
 }
 
-.productSpecialPrice, .productSalePrice, .productSpecialPriceSale {color:#000;
-	font-family:"Times New Roman", Times, serif;
-	font-size:20px;
-	line-height:20px;
+.productSpecialPrice, .productSalePrice, .productSpecialPriceSale {color:#181818;
+	font-size:22px;
+	line-height:24px;
 	font-weight:normal;}
 
 .productSpecialPriceSale {
@@ -560,74 +555,5 @@ LABEL#textAreaReviews {
 		margin:0;
 		padding:7px 0;
 }
-.buttonRow a, .buttonRow2 a { text-decoration:none;}
 
-.buttonRow input, .buttonRow2 input, .buttonRow3 input {border:none; padding:0; cursor: pointer;}
-
-/* product lightbox */
-.con_right .jersey_pro {overflow:hidden;zoom:1;}
-.jersey_pic {float:left;max-width:281px;}
-
-.top_one {width:279px;height:246px;border:1px solid #c0c0c0;overflow:hidden;line-height:246px;vertical-align:middle;display:table-cell;}
-.top_one img {display:none;}
-.top_one .top_pic {display:block;margin:auto;_margin-top: expression_r(( 246 - this.height ) / 2);}
-.bottom_one { background:#434341;max-width:265px;margin:7px 0;overflow:hidden;zoom:1;padding:7px 7px 5px 7px;}
-.bottom_one .out_one {width:235px;height:62px;float:left;overflow:hidden;}
-.out_one  img {width:53px;height:50px;filter:alpha(opacity=40);opacity: 0.4;display:block;}
-.out_one .special_img {filter:alpha(opacity=100);opacity: 1;border:1px black solid;}
-.bottom_one input {float:left;width:15px;height:52px;margin-top:5px;}
-.bottom_one .main_one {float:left;height:52px;}
-
-.tanchu {position:absolute;left:20%;width:800px;top:80px;z-index:99;display:none;}
-.top {width:800px;height:500px;margin:0 auto;background-color:white;overflow:hidden;line-height:500px;vertical-align:middle;display:table-cell;}
-.top img {display:none;}
-.top .change_img {display:block;margin:0 auto;_margin-top: expression_r(( 500 - this.height ) / 2);}
-.bottom_two {width:738px;margin:40px auto;overflow:hidden;zoom:1;}
-.bottom_two .out {width:668px; float:left;margin-top:5px;float:left;overflow:hidden;}
-.bottom_two .main {height:122px;float:left;}
-.out img {width:125px;height:120px;border:1px black solid;filter:alpha(opacity=40);opacity: 0.4;float:left;margin-right:5px;}
-.out .special {filter:alpha(opacity=100);opacity: 1;}
-.bottom_two input {float:left;width:25px;height:132px;margin-right:5px;}
-#mask {background-color:black;width:100%;filter:alpha(opacity=70);opacity: 0.7;height:100%;_height:2000px;position:absolute;left:0;top:0;z-index:60;display:none;}
-.close {width:23px;height:23px;background:url("../images/close.gif") no-repeat;cursor:pointer;font-size:18px;color:orange;font-weight:bold;position:absolute;top:0;left:777px;}
-.lf_but {width:42px;height:74px;background:url("../images/c_left.gif") no-repeat;cursor:pointer;position:absolute;left:20px;top:213px;z-index:25;}
-.rg_but {width:42px;height:74px;background:url("../images/c_right.gif") no-repeat;cursor:pointer;position:absolute;left:738px;top:213px;z-index:25;}
-.lf_but_color {width:42px;height:74px;background:url("../images/m_left.gif") no-repeat;cursor:pointer;position:absolute;left:20px;top:213px;z-index:25;}
-.rg_but_color {width:42px;height:74px;background:url("../images/m_right.gif") no-repeat;cursor:pointer;position:absolute;left:738px;top:213px;z-index:25;}
-
-.share {overflow:hidden;zoom:1;}
-.share .share_span,.share .share_link {float:left;}
-.share .share_span {font-weight:bold;margin-right:10px;}
-.share .share_link {margin-right:6px;}
-
-.jersey_rg {float:left;margin-left:14px;width:400px;display:inline;position:relative;}
-.jersey_rg span {display:block;}
-.jersey_rg .pro_num {text-align:right;font-weight:600;width:360px;}
-.jersey_rg .jer_pro_inf {font-size:18px;color:#ff6c02;font-weight:600;margin-top:6px;}
-.jersey_rg .jer_price {margin-top:8px;}
-.jersey_rg .jer_price var {text-decoration:line-through;margin-right:20px;font-size:14px;font-weight:bold;}
-.jersey_rg .jer_price em {font-size:14px;color:#da0000;font-weight:bold;}
-.jersey_rg .jer_save_price {font-size:14px;font-weight:bold;color:#3f8fcc;margin-top:6px;}
-.jersey_rg .jer_size {margin-top:10px;}
-.jersey_rg .jer_size label {font-size:14px;color:black;font-weight:600;}
-.jersey_rg .jer_cart {display:block;width:184px;padding-left:59px;height:45px;margin-top:26px;background:url("../images/abc.gif") -157px -386px no-repeat;font-size:16px;font-weight:bold;line-height:45px;color:#fc8121;}
-.jersey_rg .jer_free {position:absolute;left:284px;top:74px;width:120px;height:119px;background:url("../images/abc.gif") 0 -365px no-repeat;}
-.top_one img { width:230px; height:270px;}
-
-/* thumbnail */
-.thumbnail{ width:116px; height:116px; margin:10px 10px 5px 5px;; float:left;}
-.thumbnail img { width:118px; height:116px;}
-.thumbone{max-width: 270px; height:auto; background:none; z-index:1000;}
-.thumbone img { max-width:260px;}
-.thumbone .smallzoomimg{ position:relative; z-index:3; top:-20; left:-20; background:url("../images/icon/small_zomm.gif");}
-
-.productGeneral .normalprice, .productGeneral .price{ float:left;}
-.productGeneral .save_price{ clear:left;}
-#productTellFriendLink, #productReviewLink{ padding:0px; float:left;}
-#productDetailsList{ margin-left:0px;}
-.zhuce table tr{ height:32px;}
-.zhuce_tit{ height:26px;}
-.right_list{ padding:5px; margin:5px 0px 10px; border:1px solid #E1E1E1;}
-.right_list {border:2px solid #e1e1e1;margin-bottom:10px;}
-.right_list .child_list {padding:0px;overflow:hidden;zoom:1;}
-.right_list .child_list li {line-height:26px;width:220px;padding-left:22px;float:left;}
+.buttonRow input, .buttonRow2 input, .buttonRow3 input {border:none; padding:0; background:none;}
