--- a/includes/templates/template_blacksport/css/stylesheet_css_buttons.css
+++ b/includes/templates/template_blacksport/css/stylesheet_css_buttons.css
@@ -12,29 +12,29 @@
 
 /* css buttons */
 .cssButton, .cssButtonHover {
-	padding-top:4px;
 width : 20em;
-background-color: #000;
-height:20px;
-color : #fff;
-background:#000;
-border: none;
-margin:0px 5px;
+background-color: #F4F4F4;
+color : #000000;
+border: 2px outset #F4F4F4;
 font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
 font-size: 1.1em;
 text-align:center;
 white-space: nowrap;
 text-decoration: none;
-border-spacing: 1px;
-display: block;
-vertical-align:middle;
-font-weight:bold;
-line-height: 130%;
-cursor: pointer;
+font-weight: bold;
+padding: 0.3em;
+/*border-spacing: 1px;*/
+/*margin-left: auto;
+margin-right: auto;*/
+/*display: block;*/
+/*vertical-align: top;*/
+/*line-height: 130%;*/
+/*cursor: pointer;*/
 }
 
 .cssButtonHover {
-color: #fff;
+color: #616161;
+border-style: inset;
 text-decoration: none;
 }
 /* adding the styles below might be needed if the default button width is changed */
@@ -42,8 +42,8 @@ text-decoration: none;
 .small_delete, .button_prev, .button_next, .button_search  {width: 7em;}
 .button_sold_out_sm, .button_sold_out, .button_update_cart, .button_checkout, .button_login {width: 10em;}
 .button_return_to_product_list, .button_add_selected {width: 22em;}
-.button_in_cart{width: 130em;}  
-.button_submit {width: 18em; background:#000;font-weight:bold; height:26px;}
+.button_in_cart{width: 19em;}  
+.button_submit {width: 18em;}
 .button_update_cart {color: red;}
 .button_update_cartHover {color: black;}
 /*.innerbox#headernavcenter .boxtext .button_search {display:inline;}*/
