--- a/includes/templates/template_blacksport/css/stylesheet_tm.css
+++ b/includes/templates/template_blacksport/css/stylesheet_tm.css
@@ -1,128 +1,401 @@
-font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height:17px; {font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height:17px;}
-#4d5255 {color:#4d5255;}
-outline:none; text-decoration:underline; {outline:none; text-decoration:underline;}
-#000 {color:#000;}
-font-size:17px; text-decoration:none; line-height:20px; font-weight:bold; {font-size:17px; text-decoration:none; line-height:20px; font-weight:bold;}
-color:#cac663; {color:#cac663;}
-color:#000;	font-family:"Times New Roman", Times, serif;	font-size:20px;	line-height:20px;	font-weight:normal; {color:#000;	font-family:"Times New Roman", Times, serif;	font-size:20px;	line-height:20px;	font-weight:normal;}
-color:#3e3e3e;	font-size:15px;	line-height:15px;	font-weight:normal;	padding: 0 0 20px 17px;	background:url("../images/marker1.gif") no-repeat 1px 4px;	border-bottom:1px solid #fafaf7;	margin:20px 0 18px 0; {color:#3e3e3e;	font-size:15px;	line-height:15px;	font-weight:normal;	padding: 0 0 20px 17px;	background:url("../images/marker1.gif") no-repeat 1px 4px;	border-bottom:1px solid #fafaf7;	margin:20px 0 18px 0;}
-font-size:12px; font-weight:normal; background:#fafafa; color:#000; {font-size:12px; font-weight:normal; background:#fafafa; color:#000;}
-#000 {color:#000;}
-
 /* CSS Document */
+
 * { margin:0; padding:0;}
-body { background:#333430; font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height:17px; color:#4d5255;}
+body { background:url(../images/body-bg.gif) repeat left top; font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height:17px; color:#4d5255;}
 table, td {border-collapse:collapse; font-size:100%;}
 table, td, img {border:0;}
 form, td {margin:0; padding:0;}
 td { vertical-align:top; text-align:left;}
-.main-width { width:981px; margin:0 auto; text-align:left;}
-.wrapp{	background:url("../images/body-bg.jpg") repeat-x left top #fff; 
-}
-.bottom{	height:150px;	margin-top:-76px;}
-.extra{	background:#ffffff;	position:relative;	z-index:501;	box-shadow:0 0 1px #cccec9;	-moz-box-shadow:0 0 1px #cccec9;	-webkit-box-shadow:0 0 1px #cccec9;}
+.extra-main{width:980px; margin:0 auto; text-align:left;}
+.main-width { width:940px; margin:0 auto; text-align:left;}
+
 input, textarea { font-family:Tahoma; font-size:1em;}
-.forgot_pass{ position:relative; top:4px;}
+
 .fleft { float:left;}
 .fright { float:right;}
 .clear { clear:both;}
+
 img {vertical-align:top;}
 a img { border:0;}
 ul { list-style:none;}
+
 .alignright { text-align:right;}
 .aligncenter { text-align:center;}
-.wrapper{ width:100%; overflow:hidden; text-align:center;}
+
+.wrapper{ width:100%; overflow:hidden;}
 .container { width:100%;}
 .column-1, .column-2, .column-3{ float:left;}
+
 a {color:#000; outline:none; text-decoration:underline;}
 a:hover{text-decoration:none;}
 p { margin:0; padding:0;}
-#advSearchResultsDefault form{	margin-bottom:10px;	display:block;	overflow:hidden;}
-#popupSearchHelp{	padding:0;}
-.centeredContent .inp1 input{	width:300px;}
-.productListing-data .normalprice{	display:block;}
+
+#advSearchResultsDefault form{
+	margin-bottom:10px;
+	display:block;
+	overflow:hidden;
+}
+#popupSearchHelp{
+	padding:0;
+}
+.centeredContent .inp1 input{
+	width:300px;
+}
+.productListing-data .normalprice{
+	display:block;
+}
+#advSearchResultsDefault form select{
+	margin-left:20px;
+}
+#accountHistInfo{
+	padding-top:15px !important;
+}
 /* ============================= header ====================== */
-#header{	position:relative;	z-index:502;}
-#header .logo{	float:left;	padding:46px 0 0 6px;}
-#header .cart{	float:left;	color:#888a82;	font-size:12px;	line-height:14px;	text-transform:uppercase;	background:url("../images/cart.gif") no-repeat left top;	padding: 2px 0 2px 51px;	margin:87px 0 0 60px;}
-*+html #header .cart{	padding:3px 0 2px 51px;}
-#header .cart a{	color:#fff;	font-weight:bold;	text-decoration:none;}
-#header .cart a:hover{	color:#cac663;}
-#header .cart .one{	display:block;	padding:2px 0 0 0;}
-#header .cart .st2{	letter-spacing:1px;}
-#header .header-right{	float:right;	text-align:right;}
-#header .lang{	margin:42px 0 0 0;	height:15px;}
-*+html #header .lang{	margin:41px 0 0 0;}
-#header .search{	padding:9px 0 0 0;}
-#header .search .input1{	background:none;	border:1px solid #fff;	font-size:13px;	line-height:16px;	color:#787a78;	text-transform:lowercase;	padding:3px 2px 4px 7px;	width:218px;}
-#header .navigation{	color:#fff;	font-size:11px;	line-height:20px;	text-transform:uppercase;	padding:12px 1px 0 0;}
-*+html #header .navigation{	padding:11px 1px 0 0;}
-#header .navigation a{	color:#fff;	font-size:11px;	line-height:20px;	text-transform:uppercase;	text-decoration:none;}
-#header .navigation a:hover{	color:#cac663;}
-#header .box2{	background:#fff;	margin:16px 0 0 0;	position:relative;	overflow:visible!important;	padding-bottom:16px;}
-#header .menu{ 
-	overflow:hidden;	padding:20px 0 0 37px;}
-#header .menu ul{	padding:0;	margin:0;	overflow:hidden;}
-#header .menu ul li{	float:left;}
-#header .menu ul li a{	display:block;	text-decoration:none;	color:#1e1e1e;	font-size:14px;	line-height:40px;	background:url("../images/menu-line.png") no-repeat left 11px;	padding: 0 18px 0 18px;}
-#header .menu ul li:first-child a{	
-	background:none;	padding-left:0;}
+#header{
+	position:relative;
+}
+#header .box1{
+	background:url(../images/top-shine.png) no-repeat center top;
+	height:58px;
+}
+#header .currencies{
+	float:left;
+	color:#656565;
+	font-size:12px;
+	line-height:15px;
+	position:absolute;
+	left:1px;
+	top:18px;
+	z-index:510;
+	text-align:left;
+}
+#header .currencies .select.jqTransformHidden{
+	display:none;
+}
+#header .currencies .label{
+	float:left;
+	font-family:Arial, Helvetica, sans-serif;
+	margin-right:-1px;
+	margin-top:-1px;
+	color:#eeefee;
+	font-size:11px;
+	line-height:20px;
+}
+#header .currencies .jqTransformSelectWrapper{
+	background:url(../images/cur-arrow.gif) no-repeat right top;
+	border:none;
+	float:left;
+	width:109px!important;
+	padding: 0 0 0 0;
+	cursor:default;
+}
+#header .currencies .jqTransformSelectWrapper div{
+	height:24px!important;
+	overflow:hidden;
+	background:url(../images/cur-bg.gif) no-repeat left top;
+}
+#header .currencies .jqTransformSelectWrapper div span{
+	font-size:11px;
+	color:#4d4c4c;
+	padding:2px 5px 0 7px;
+	width:99px!important;
+	height:20px!important;
+	overflow:hidden;
+	float:left;
+	font-family:Arial, Helvetica, sans-serif;
+}
+*+html #header .currencies .jqTransformSelectWrapper div span{
+	padding:2px 5px 0 6px;
+}
+#header .currencies ul{
+	padding:0px 0 0 0;
+	margin:0 1px 0 0px;
+	width:108px!important;
+	height:75px!important;
+	overflow:hidden;
+	background:#020202;
+	border:1px solid #4d4c4c;
+	font-family:Arial, Helvetica, sans-serif;
+}
+#header .currencies ul li{
+	line-height:11px;
+	padding:1px 4px;
+	overflow:hidden;
+	width:101px!important;
+}
+#header .currencies ul li a{
+	color:#4d4c4c;
+	font-size:11px;
+	line-height:13px;
+	text-decoration:none;
+	display:block;
+}
+#header .currencies ul li:hover{
+	background:#4d4c4c;
+}
+#header .currencies ul li a:hover{
+	color:#000;
+}
+#header .lang{
+	width:22px;
+	height:20px;
+	position:absolute;
+	top:18px;
+	left:177px;
+}
+#header .fright{
+	text-align:right;
+}
+#header .search{
+	float:right;
+	overflow:hidden;
+	margin:18px 1px 0 0;
+}
+#header .search .input1{
+	float:left;
+	padding:0 3px;
+	background:url(../images/search-bg.gif) no-repeat left top;
+	border:none;
+	height:20px;
+	width:150px;
+}
+#header .search .input2{
+	float:left;
+	padding:0;
+	border:none;
+}
+#header .cart{
+	float:right;
+	overflow:hidden;
+	color:#686868;
+	font-size:11px;
+	line-height:20px;
+	background:url(../images/cart.png) no-repeat left 3px;
+	padding:0 19px 0 28px;
+	margin:17px 0 0 0;
+}
+#header .cart .st0{
+	font-weight:bold;
+	color:#fff;
+}
+#header .cart a{
+	color:#f8f9f8;
+	text-decoration:none;
+}
+#header .cart a:hover{
+	color:#c20000;
+}
+#header .navigation{
+	float:right;
+	padding:17px 47px 0 0; 
+}
+*+html #header .navigation{
+	padding:15px 47px 0 0; 
+}
+#header .navigation a{
+	color:#fff;
+	font-size:11px;
+	line-height:20px;
+	text-decoration:underline;
+	margin-left:13px;
+}
+#header .navigation a:hover{
+	text-decoration:none;
+}
+#header .box2{
+	border-top:1px solid #3a3a3a;
+	border-bottom:1px solid #303030;
+	background:url(../images/menu-bg.gif) repeat-x left top;
+}
+#header .logo{	
+	float:left;
+	padding:0 0 0 0;
+}
+#header .menu{
+	float:right;
+	overflow:hidden;
+}
+#header .menu ul{
+	padding:0;
+	margin:0;
+	overflow:hidden;
+}
+#header .menu ul li{
+	float:left;
+}
+#header .menu ul li a{
+	display:block;
+	color:#d9d9d9;
+	font-size:14px;
+	line-height:20px;
+	font-weight:normal;
+	text-transform:uppercase;
+	text-decoration:none;
+	padding:12px 9px 13px 10px;
+	font-family: 'Quattrocento Sans', sans-serif;
+	background:url(../images/menu-bg.gif) repeat-x left top;
+	border-left:1px solid #3d3d3d;
+	border-right:1px solid #212121;
+}
+#header .menu ul li.selected.last a,
+#header .menu ul li.last a:hover,
+#header .menu ul li.last a{
+	border-right:none;
+	padding:12px 8px 13px 10px;
+}
+
 #header .menu ul li.selected a,
-#header .menu ul li a:hover{	color:#cac663;}
-.menu ul li.selected a{}
-#header .currencies{	float:left;	color:#fff;	font-size:12px;	line-height:20px;	position:absolute;	right:18px;	top:26px;	z-index:510;	background:url("../images/cur.png") no-repeat left top;	padding:1px;}
-#header .currencies .select.jqTransformHidden{	display:none;}
-#header .currencies .label{	float:left;	margin-right:-1px;	margin-top:5px;	color:#6c6c6c;	font-size:13px;	line-height:13px;	text-transform:uppercase;	padding-left:8px;}
-#header .currencies .jqTransformSelectWrapper{	background:url("../images/cur-arrow.gif") no-repeat right top;	border:none;	float:left;	width:124px!important;	padding: 0 0 0 0;	cursor:default;	margin-bottom:-1px;}
-#header .currencies .jqTransformSelectWrapper div{	height:24px!important;	overflow:hidden;}
-#header .currencies .jqTransformSelectWrapper div span{	font-size:12px;	color:#7a7d72;	font-family:Tahoma, Geneva, sans-serif;	padding:1px 22px 0 9px;	width:124px!important;	height:23px!important;	overflow:hidden;	float:left;}
-#header .currencies ul{	padding:0;	margin:0 0 0 0px;	width:123px!important;	height:110px!important;	overflow:hidden;	background:#fff;	border:1px solid #d1d1d1;	border-top:none;}
-#header .currencies ul li{	line-height:11px;	padding:1px 5px;	overflow:hidden;	width:124px!important;}
-#header .currencies ul li a{	color:#7e7563;	font-size:12px;	line-height:16px;	text-decoration:none;}
-#header .currencies ul li a:hover{	color:#cac663;}
+#header .menu ul li a:hover{
+	background:url(../images/menu-bg-act.gif) repeat-x left top;
+	border-left:1px solid #872a2a;
+	border-right:1px solid #4f0303;
+	
+}
 /* ============================= content ===================== */
+
 .name{ font-size:17px; text-decoration:none; line-height:20px; font-weight:bold;}
-.name:hover{ color:#cac663;}
-.column-center-padding{	padding:0 15px 0 0;}
-#column-left{	padding:0 10px 0 15px;}
-.centerBoxHeading{	color:#3e3e3e;	font-size:15px;	line-height:15px;	font-weight:normal;	padding: 0 0 20px 17px;	background:url("../images/marker1.gif") no-repeat 1px 4px;	border-bottom:1px solid #fafaf7;	margin:20px 0 18px 0;}
-#indexDefault #featuredProducts .centerBoxHeading{	margin-bottom:0px;}
-.product-col{	width:200px!important;	padding-bottom:9px;	margin-top:18px;}
-.product-col .img{	border:1px solid #eaead8;	text-align:center;	padding:4px;}
-.product-col .img:hover{	border:1px solid #b0b080;}
-.product-col .name{	font-size:12px;	line-height:16px;	color:#2f2f2f;	font-weight:bold;	text-decoration:underline;}
-.product-col .name:hover{	text-decoration:none;}
-.product-col .prod-info{	text-align:center;	padding:19px 0 0 0;	margin-left:-10px;	line-height:20px;}
-.product-col .text{	color:#909090;	font-size:11px;	line-height:16px;	text-transform:uppercase;	padding:8px 0 8px 0;}
-.price{	color:#000;	font-family:"Times New Roman", Times, serif;	font-size:20px;	line-height:20px;	font-weight:normal;}
-.price strong{	font-weight:normal;}
-.product-col .price{	padding-bottom:10px;}
-.bot{	width:100%;	height:20px;	overflow:hidden;	
+.name:hover{ color:#e12c22;}
+.column-center-padding{
+	background:#fff;
+	padding: 10px 20px 6px;
+}
+#contentMainWrapper{
+	background:#2b2b2b;
+}
+#column-center{
+	padding-bottom:16px;
+}
+.centerBoxHeading{
+	color:#737373;
+	font-size:23px;
+	line-height:25px;
+	text-transform:uppercase;
+	font-weight:normal;
+	font-family: 'Hammersmith One', sans-serif;
+	padding:26px 0 10px 18px;
+	margin-bottom:10px;
+}
+.firstWord{
+	color:#141414;
+}
+.product-col{
+	width:176px!important;
+	padding:17px 17px 30px;
+}
+.product-col .prod-info{
+	padding:2px 0 0 2px;
+}
+.product-col .name{
+	color:#f40606;
+	font-size:12px;
+	line-height:18px;
+	font-weight:normal;
+	text-decoration:underline;
+}
+.product-col .name:hover{
+	text-decoration:none;
+	color:#000;
+}
+.product-col .text{
+	color:#949494;
+	font-size:11px;
+	line-height:16px;
+	display:inline-block;
+	padding:6px 0 12px 0;
+}
+.price{
+	color:#181818;
+	font-size:22px;
+	line-height:24px;
+	font-weight:normal;
+}
+.price strong{
+	font-weight:normal;
+}
+.bottom{
+	height:15px;
+}
+#reviewsDefault .rev-but{
+	margin-left:202px;
 }
 /* ============================= footer ====================== */
-#footer{	overflow:hidden;	position:relative;	z-index:500;	background:url("../images/bottom-bg.jpg") repeat-x left top #33342f;	margin-top:-76px;}
-#footer .copyright{	color:#797977;	font-size:14px;	line-height:40px;	float:right;	padding:87px 0 31px 0;}
-#footer .copyright a{	color:#e6e6e6;	text-decoration:none;}
-#footer .copyright a:hover{	color:#797977;}
+#footer{
+	padding:24px 0 27px 0;
+}
+#footer .footer-menu{
+	float:left;
+}
+#footer .copyright{
+	float:right;
+	color:#757575;
+	font-size:11px;
+	line-height:20px;
+}
+#footer .copyright a{
+	color:#757575;
+	text-decoration:none;
+}
+#footer .copyright a:hover{
+	color:#fff;
+}
+
 /* ============================= forms ======================= */
 input, select, textarea{ font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height:normal; color:#010101; border:solid 1px #e3e3e3; padding:2px; background:#fdfdfd;}
 input:focus, select:focus, textarea:focus{outline:none;}
 .cartRemoveItemDisplay input,
 #gender-female, #gender-male, #newsletter-checkbox, #email-format-text, #email-format-html, #rating-1, #rating-2, #rating-3, #rating-4, #rating-5, #pmt-linkpoint_api, #pmt-moneyorder, #pmt-paypal, #pmt-cod, #notify-0{ border:none!important;}
-#rating-1, #rating-2, #rating-3, #rating-4, #rating-5{margin:2px 4px 0 8px;}
+#rating-1, #rating-2, #rating-3, #rating-4, #rating-5{margin:2px 4px 0 8px; padding:0; background:none;}
+*+html #rating-1{ margin:0; padding:0;}
+*+html #rating-2{ margin:0; padding:0;}
+*+html #rating-3{ margin:0; padding:0;}
+*+html #rating-4{ margin:0; padding:0;}
+*+html #rating-5{ margin:0; padding:0;}
 #globalnotify, #pmt-cod, #pmt-moneyorder, #ship-flat-flat, #ship-item-item, #ship-storepickup-storepickup, #gender-male, #gender-female, #email-format-html, #email-format-text, #newsletter{border:none!important;	position:relative; top:2px;}
 #primary{ margin-left:10px;	position:relative; top:2px; border:none!important;}
 #disc-ot_coupon{margin:5px 0 0 0;}
-/* ============================= slider ====================== */
-#slider{	overflow:hidden;	width:710px;	height:322px;	margin-bottom:10px;}
-#coin-slider-coin-slider{	width:710px;	height:322px;	position:relative;	float:left;	overflow:hidden;}
-#coin-slider{	width:710px!important;	height:322px!important;	overflow:hidden!important;	
+
+.slider{
+	width:940px;
+	height:460px;
+	float:left;
+	overflow:hidden;
 }
-#cs-buttons-coin-slider{	position:absolute;	bottom:0px;	left:0px;	padding:0;	overflow:hidden;	background:url("../images/pagination-bg.png") repeat-x left top;	width:701px;	height:18px;	padding: 7px 0 0 9px;}
-#cs-buttons-coin-slider a{	display:block;	text-indent:-10000px;	float:left;	width:12px;	height:12px;	background:url("../images/pagination.png") no-repeat right top;	margin-right:2px;}
-#cs-buttons-coin-slider a:hover,
-#cs-buttons-coin-slider a.cs-active{	background:url("../images/pagination.png") no-repeat left top;}
-#cs-navigation-coin-slider{	display:block!important;	position:absolute;	top:0;	left:0;}
-#cs-prev-coin-slider{	display:none;}
-#cs-next-coin-slider{	display:none;}
-.product-col .img img{ width:190px; height:130px;}
+#faded{
+	overflow:hidden;
+	width:940px;
+	height:460px;
+	position:relative;
+}
+
+#faded .pagination{
+	position:absolute;
+	bottom:72px;
+	left:439px;
+	padding:0;
+	margin:0;
+	z-index:100;
+}
+#faded .pagination li{
+	float:left;
+	width:11px;
+	height:11px;
+	margin-right:14px;
+}
+#faded .pagination li a{
+	width:11px;
+	height:11px;
+	display:block;
+	text-indent:-10000px;
+	background:url(../images/pagination.png) no-repeat right top;
+}
+#faded .pagination li.current a,
+#faded .pagination li a:hover{
+	background:url(../images/pagination.png) no-repeat left top;
+}
+.bot-banners{
+	width:100%;
+	overflow:hidden;
+}
+.bot-banners div{
+	float:left;
+}
