--- a/includes/templates/template_blacksport/css/stylesheet_main.css
+++ b/includes/templates/template_blacksport/css/stylesheet_main.css
@@ -62,7 +62,7 @@ textarea#enquiry {width:70%; margin:1px 0;}
 
 .image{ display:inline-block; border:solid 1px #eceaea;  padding:2px; position:relative;}
 .image a{ position:relative; display:inline-block;}
-.zoom{ position:absolute; width:29px; height:28px; background:url(../images/icons/zoom-icon.png) no-repeat 0 0; bottom:3px; left:3px;}
+.zoom{ position:absolute; width:29px; height:28px; background:url("../images/icons/zoom-icon.png") no-repeat 0 0; bottom:3px; left:3px;}
 
 .description a{ font-weight:bold;}
 .description strong{ color:#000; display:block;}
@@ -191,7 +191,7 @@ h2.centerBoxHeading {color:#737373;
 
 #newProductsDefault, #allProductsDefault, #featuredDefault, #specialsListing, #reviewsDefault {}
 
-#newProductsDefault .line, #allProductsDefault .line, #featuredDefault .line {padding:0; line-height:0px; font-size:0px; background:url(../images/line_1.gif) top left repeat-x; height:7px;}
+#newProductsDefault .line, #allProductsDefault .line, #featuredDefault .line {padding:0; line-height:0px; font-size:0px; background:url("../images/line_1.gif") top left repeat-x; height:7px;}
 
 #newProductsDefault td, #allProductsDefault td, #featuredDefault td {padding:10px; border:none;}
 
@@ -336,7 +336,7 @@ h2.centerBoxHeading {color:#737373;
 
 #cartInstructionsDisplay {padding:10px; border-bottom:solid 1px #eceaea;}
 
-#cartEmptyText {font-size:17px; color:#fff; background:url(../images/icons/warning2.gif) right 17px no-repeat #f76218; text-transform:uppercase;   font-weight:bold; padding:30px 0 17px 50px; margin-bottom:15px; height:35px;}
+#cartEmptyText {font-size:17px; color:#fff; background:url("../images/icons/warning2.gif") right 17px no-repeat #f76218; text-transform:uppercase;   font-weight:bold; padding:30px 0 17px 50px; margin-bottom:15px; height:35px;}
 
 #cartContentsDisplay {border-left:1px solid #E1E1E1;}
 #cartContentsDisplay th {border:1px solid #E1E1E1; border-left:none; padding:5px; text-align:center;}
