--- a/includes/templates/template_blacksport/css/stylessheet_fade.css
+++ b/includes/templates/template_blacksport/css/stylessheet_fade.css
@@ -9,7 +9,7 @@ URL : www.hv-designs.co.uk
 */
 
 .latest_img {
-	border: 1px solid #575757;
+	/*border: 1px solid #575757;*/
 	/*margin-left: 12px;*/
 }
 
