--- a/includes/templates/template_blacksport/css/stylesheet_main.css
+++ b/includes/templates/template_blacksport/css/stylesheet_main.css
@@ -53,7 +53,7 @@ textarea#enquiry {width:70%; margin:1px 0;}
 .tie-margin1{ margin-bottom:10px;}
 .tie .tie-indent{ padding:11px;}
 
-.tie2{ background:#e0e0e0; }
+.tie2{ background:#e0e0e0; margin-bottom:5px;}
 .tie2 .tie2-indent{ padding:15px 20px;}
 .tie2 label{ font-weight:bold; color:#010101;}
 
@@ -140,7 +140,7 @@ legend{ border:solid 1px #eceaea; padding:10px 20px; color:#494949; background:#
 
 
 
-h2 {font-size:14px; font-weight:bold; line-height:normal; color:#363636; padding:3px 0px 5px;}
+h2 {font-size:14px; font-weight:bold; line-height:normal; color:#363636; padding:3px 0px 0px;}
 h3 {color:#363636; font-size:12px; font-weight:bold; line-height:normal; padding:3px 0px 5px;}
 h4 {color:#363636; font-size:11px; font-weight:bold; line-height:normal; padding:3px 0px 5px;}
 
